// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render a pagination with details 1`] = `
<GridLayout
  cells={
    Array [
      Object {
        "content": <Text
          color="#667380"
          isInline={true}
          tag="span"
          type="small"
        >
          Showing 
          1
           to 
          10
           of 
          105
           entries
        </Text>,
        "size": Object {
          "desktop": 6,
          "min": 12,
        },
      },
      Object {
        "content": <UNDEFINED>
          <styled.button
            disabled={true}
            onClick={[Function]}
          >
            <styled.span
              arrowDirection="left"
            >
              <FontAwesomeIcon
                type="chevron-left"
              />
            </styled.span>
          </styled.button>
          <styled.button
            isCurrent={true}
            onClick={[Function]}
          >
            1
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            2
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            3
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            4
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            5
          </styled.button>
          <styled.div>
            ...
          </styled.div>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            11
          </styled.button>
          <styled.button
            disabled={false}
            onClick={[Function]}
          >
            <styled.span
              arrowDirection="right"
            >
              <FontAwesomeIcon
                type="chevron-right"
              />
            </styled.span>
          </styled.button>
        </UNDEFINED>,
        "size": Object {
          "desktop": 6,
          "min": 12,
        },
      },
    ]
  }
  data-component-type="pagination"
  gridColumns={12}
  gutterMarginX="none"
  gutterMarginY={12}
  gutterPaddingX="none"
  gutterPaddingY="none"
  horizontalAlignment="justify"
  verticalAlignment="stretch"
/>
`;

exports[`<Pagination /> should render a pagination without details by passing limited variables 1`] = `
<GridLayout
  cells={
    Array [
      Object {
        "content": <UNDEFINED>
          <styled.button
            disabled={true}
            onClick={[Function]}
          >
            <styled.span
              arrowDirection="left"
            >
              <FontAwesomeIcon
                type="chevron-left"
              />
            </styled.span>
          </styled.button>
          <styled.button
            isCurrent={true}
            onClick={[Function]}
          >
            1
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            2
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            3
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            4
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            5
          </styled.button>
          <styled.div>
            ...
          </styled.div>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            10
          </styled.button>
          <styled.button
            disabled={false}
            onClick={[Function]}
          >
            <styled.span
              arrowDirection="right"
            >
              <FontAwesomeIcon
                type="chevron-right"
              />
            </styled.span>
          </styled.button>
        </UNDEFINED>,
        "size": Object {
          "desktop": 6,
          "min": 12,
        },
      },
    ]
  }
  data-component-type="pagination"
  gridColumns={12}
  gutterMarginX="none"
  gutterMarginY={12}
  gutterPaddingX="none"
  gutterPaddingY="none"
  horizontalAlignment="justify"
  verticalAlignment="stretch"
/>
`;

exports[`<Pagination /> should render a pagination without details by passing props hasPageDetails 1`] = `
<GridLayout
  cells={
    Array [
      Object {
        "content": <UNDEFINED>
          <styled.button
            disabled={true}
            onClick={[Function]}
          >
            <styled.span
              arrowDirection="left"
            >
              <FontAwesomeIcon
                type="chevron-left"
              />
            </styled.span>
          </styled.button>
          <styled.button
            isCurrent={true}
            onClick={[Function]}
          >
            1
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            2
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            3
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            4
          </styled.button>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            5
          </styled.button>
          <styled.div>
            ...
          </styled.div>
          <styled.button
            isCurrent={false}
            onClick={[Function]}
          >
            11
          </styled.button>
          <styled.button
            disabled={false}
            onClick={[Function]}
          >
            <styled.span
              arrowDirection="right"
            >
              <FontAwesomeIcon
                type="chevron-right"
              />
            </styled.span>
          </styled.button>
        </UNDEFINED>,
        "size": Object {
          "desktop": 6,
          "min": 12,
        },
      },
    ]
  }
  data-component-type="pagination"
  gridColumns={12}
  gutterMarginX="none"
  gutterMarginY={12}
  gutterPaddingX="none"
  gutterPaddingY="none"
  horizontalAlignment="justify"
  verticalAlignment="stretch"
/>
`;
